--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/fusionalliance/resourceful.js",
   "devDependencies": {
+    "6to5ify": "^4.1.1",
     "browser-sync": "^1.9.1",
     "browserify": "^8.1.1",
     "browserify-istanbul": "^0.1.3",
@@ -62,5 +63,8 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.2.1"
+  },
+  "dependencies": {
+    "systemjs": "^0.13.2"
   }
 }
