--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   },
   "homepage": "https://github.com/fusionalliance/resourceful.js",
   "devDependencies": {
-    "6to5": "^3.6.2",
-    "6to5ify": "^4.1.1",
+    "babel": "^4.0.1",
+    "babelify": "^5.0.3",
     "browser-sync": "^1.9.1",
     "browserify": "^8.1.1",
     "browserify-istanbul": "^0.1.3",
@@ -48,6 +48,7 @@
     "jasmine-sinon": "^0.4.0",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.25",
+    "karma-babel-preprocessor": "^4.0.0",
     "karma-browserify": "^3.0.0",
     "karma-chrome-launcher": "^0.1.7",
     "karma-commonjs": "0.0.13",
