working on getting the test working. branched to change backend to use es6 boilerplate and move away from browserify.

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "karma-opera-launcher": "^0.1.0",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-sinon": "^1.0.4",
+    "karma-traceur-preprocessor": "^0.4.0",
     "lodash": "^2.4.1",
     "pretty-hrtime": "^1.0.0",
     "require-dir": "^0.1.0",
