--- a/package.json
+++ b/package.json
@@ -1,74 +1,54 @@
 {
   "name": "resourceful.js",
-  "outputName": "resourceful.js",
-  "entryName": "app.js",
   "version": "0.0.1",
   "description": "ES6 implementation of constants.js library",
-  "main": "dist/resourceful.js",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:fusionalliance/resourceful.js.git"
-  },
-  "keywords": [
-    "resources",
-    "constants"
-  ],
+  "homepage": "https://github.com/fusionalliance/resourceful.js",
   "author": "Fusion Alliance (http://www.fusionalliance.com/)",
   "contributors": [
     "Jim Kelly <Talk@ProgrammerWithouta.Name> (http://programmerwithouta.name/)",
     "Ray Clanan <rclanan@utopianconcept.com> (http://utopianconcept.com/)"
   ],
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:fusionalliance/resourceful.js.git"
+  },
   "bugs": {
     "url": "https://github.com/fusionalliance/resourceful.js/issues"
   },
-  "homepage": "https://github.com/fusionalliance/resourceful.js",
-  "devDependencies": {
-    "browser-sync": "^1.9.1",
-    "browserify": "^8.1.1",
-    "browserify-istanbul": "^0.1.3",
-    "browserify-shim": "^3.8.2",
-    "complexity-report": "^1.1.1",
-    "del": "^1.1.1",
-    "es6ify": "^1.6.0",
-    "gulp": "^3.8.10",
-    "gulp-changed": "^1.1.0",
-    "gulp-clean": "^0.3.1",
-    "gulp-complexity": "^0.3.0",
-    "gulp-filesize": "0.0.6",
-    "gulp-jshint": "^1.9.0",
-    "gulp-notify": "^2.1.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sourcemaps": "^1.3.0",
-    "gulp-uglify": "^1.1.0",
-    "gulp-util": "^3.0.2",
-    "gulp-wrap": "^0.10.0",
-    "jasmine-core": "^2.1.3",
-    "jasmine-sinon": "^0.4.0",
-    "jshint-stylish": "^1.0.0",
-    "karma": "^0.12.25",
-    "karma-babel-preprocessor": "^4.0.0",
-    "karma-browserify": "^3.0.0",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma-commonjs": "0.0.13",
-    "karma-coverage": "0.2.6",
-    "karma-firefox-launcher": "^0.1.4",
-    "karma-ie-launcher": "^0.1.5",
-    "karma-jasmine": "~0.3.5",
-    "karma-opera-launcher": "^0.1.0",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-sinon": "^1.0.4",
-    "karma-traceur-preprocessor": "^0.4.0",
-    "lodash": "^2.4.1",
-    "pretty-hrtime": "^1.0.0",
-    "require-dir": "^0.1.0",
-    "sinon": "^1.12.2",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0",
-    "watchify": "^2.2.1"
-  },
+  "keywords": [
+    "resources",
+    "constants"
+  ],
   "dependencies": {
-    "systemjs": "^0.13.2",
+    "requirejs": "~2.1.16",
     "traceur": "0.0.84"
+  },
+  "devDependencies": {
+    "karma": "~0.12.31",
+    "karma-jasmine": "~0.3.5",
+    "karma-chrome-launcher": "~0.1.7",
+    "karma-traceur-preprocessor": "~0.4.0",
+    "karma-requirejs": "~0.2.2",
+    "assert": "angular/assert#dist",
+    "gulp": "~3.8.11",
+    "gulp-traceur": "~0.17.0",
+    "gulp-connect": "~2.2",
+    "gulp-clean": "~0.3.1",
+    "rimraf": "~2.2.8",
+    "gulp-rjs": "~0.1.0",
+    "requirejs": "~2.1.16",
+    "gulp-rename": "~1.2.0",
+    "event-stream": "~3.2.2",
+    "gulp-ignore": "~1.2.1",
+    "gulp-requirejs": "~0.1.3",
+    "gulp-closure-compiler": "~0.2.16",
+    "closurecompiler": "~1.5.1",
+    "gulp-shell": "~0.3.0",
+    "gulp-grunt": "~0.5.2"
+  },
+  "scripts": {
+    "test": "karma start --single-run"
   }
+
 }
