--- a/package.json
+++ b/package.json
@@ -25,30 +25,31 @@
     "traceur": "0.0.84"
   },
   "devDependencies": {
-    "karma": "~0.12.31",
-    "karma-jasmine": "~0.3.5",
-    "karma-chrome-launcher": "~0.1.7",
-    "karma-traceur-preprocessor": "~0.4.0",
-    "karma-requirejs": "~0.2.2",
     "assert": "angular/assert#dist",
-    "gulp": "~3.8.11",
-    "gulp-traceur": "~0.17.0",
-    "gulp-connect": "~2.2",
-    "gulp-clean": "~0.3.1",
-    "rimraf": "~2.2.8",
-    "gulp-rjs": "~0.1.0",
-    "requirejs": "~2.1.16",
-    "gulp-rename": "~1.2.0",
-    "event-stream": "~3.2.2",
-    "gulp-ignore": "~1.2.1",
-    "gulp-requirejs": "~0.1.3",
-    "gulp-closure-compiler": "~0.2.16",
     "closurecompiler": "~1.5.1",
+    "event-stream": "~3.2.2",
+    "gulp": "~3.8.11",
+    "gulp-clean": "~0.3.1",
+    "gulp-closure-compiler": "~0.2.16",
+    "gulp-connect": "~2.2",
+    "gulp-grunt": "~0.5.2",
+    "gulp-ignore": "~1.2.1",
+    "gulp-rename": "~1.2.0",
+    "gulp-requirejs": "~0.1.3",
+    "gulp-rjs": "~0.1.0",
     "gulp-shell": "~0.3.0",
-    "gulp-grunt": "~0.5.2"
+    "gulp-traceur": "~0.17.0",
+    "karma": "~0.12.31",
+    "karma-chrome-launcher": "~0.1.7",
+    "karma-jasmine": "~0.3.5",
+    "karma-requirejs": "~0.2.2",
+    "karma-sinon": "^1.0.4",
+    "karma-traceur-preprocessor": "~0.4.0",
+    "requirejs": "~2.1.16",
+    "rimraf": "~2.2.8",
+    "sinon": "^1.12.2"
   },
   "scripts": {
     "test": "karma start --single-run"
   }
-
 }
