--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "assert": "angular/assert#dist",
     "closurecompiler": "~1.5.1",
     "event-stream": "~3.2.2",
+    "complexity-report": "^1.1.1",
+    "del": "^1.1.1",
     "gulp": "~3.8.11",
     "gulp-clean": "~0.3.1",
     "gulp-closure-compiler": "~0.2.16",
@@ -39,15 +41,25 @@
     "gulp-rjs": "~0.1.0",
     "gulp-shell": "~0.3.0",
     "gulp-traceur": "~0.17.0",
+    "gulp-complexity": "^0.3.0",
+    "gulp-filesize": "0.0.6",
+    "gulp-jshint": "^1.9.0",
+    "gulp-notify": "^2.1.0",
+    "gulp-sourcemaps": "^1.3.0",
+    "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.2",
+    "gulp-wrap": "^0.10.0",
     "karma": "~0.12.31",
     "karma-chrome-launcher": "~0.1.7",
     "karma-jasmine": "~0.3.5",
     "karma-requirejs": "~0.2.2",
     "karma-sinon": "^1.0.4",
     "karma-traceur-preprocessor": "~0.4.0",
+    "require-dir": "^0.1.0",
     "requirejs": "~2.1.16",
     "rimraf": "~2.2.8",
-    "sinon": "^1.12.2"
+    "sinon": "^1.12.2",
+    "jshint-stylish": "^1.0.0"
   },
   "scripts": {
     "test": "karma start --single-run"
