--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "gulp-clean": "^0.3.1",
     "gulp-complexity": "^0.3.0",
     "gulp-filesize": "0.0.6",
+    "gulp-jscs": "^1.4.0",
+    "gulp-jscs-stylish": "^1.0.2",
     "gulp-jshint": "^1.9.0",
     "gulp-notify": "^2.1.0",
     "gulp-rename": "^1.2.0",
